[gd_scene load_steps=10 format=3 uid="uid://ckhb0rcx8hdgt"]

[ext_resource type="FontFile" uid="uid://cuy7ri4b1ts8c" path="res://resources/fonts/More 15.ttf" id="1_qhj7u"]
[ext_resource type="Script" path="res://objects/ui/FinalSpell.gd" id="1_r1mo4"]
[ext_resource type="Texture2D" uid="uid://j362a04ut3cx" path="res://resources/textures/monsters/placeholders/BansheeHead_muscle.png" id="2_pjofg"]
[ext_resource type="Resource" uid="uid://b76s8hrfrycs1" path="res://resources/content/MonsterResourceLinker.tres" id="3_rg5nk"]
[ext_resource type="Texture2D" uid="uid://bxtsr11lhvl31" path="res://resources/textures/monsters/placeholders/BansheeArm_muscle.png" id="3_uvudd"]
[ext_resource type="Texture2D" uid="uid://bopcnpvxnx27c" path="res://resources/textures/monsters/placeholders/BansheeTorso_muscle.png" id="4_dwl1m"]
[ext_resource type="LabelSettings" uid="uid://c6lcdjj02k82c" path="res://resources/themes/StrangeText.tres" id="4_i1fof"]
[ext_resource type="Texture2D" uid="uid://c2ugmfvhnjdut" path="res://resources/textures/monsters/placeholders/BansheeLegs_muscle.png" id="5_ce6kb"]

[sub_resource type="LabelSettings" id="LabelSettings_stsm2"]
font = ExtResource("1_qhj7u")
font_size = 32

[node name="FinalSpell" type="Control"]
layout_mode = 3
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -20.0
offset_top = -40.0
offset_right = 20.0
grow_horizontal = 2
grow_vertical = 0
script = ExtResource("1_r1mo4")
monster_linker = ExtResource("3_rg5nk")

[node name="SpellName" type="Label" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -382.0
offset_top = -551.0
offset_right = -148.0
offset_bottom = -519.0
grow_horizontal = 2
grow_vertical = 0
text = "SUPER FINAL NAME"
label_settings = SubResource("LabelSettings_stsm2")

[node name="LeftText" type="Label" parent="."]
visible = false
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -119.0
offset_top = -598.0
offset_right = 1.0
offset_bottom = -81.0
grow_horizontal = 2
grow_vertical = 0
text = "QSOPDIQHSDPIOUQHSDPOIQHSDPQOIUSHDQPOSIHDPQOISHDQPIOSDHQPSOIDHQPSODIHQSPDOIHQLISUDGQLISJBDLMQSIDUQPOSIDQKSJDPOQSIDIOQISHDBQSKLDLQKHJSDOIQSUDIOQXBNWCK.QJBNXLJSODIQSODKHNQSKLDJNPOQXCNOPIQXHOI>SWUYDQODNQPOIXHDKHJXHPQOIS"
label_settings = ExtResource("4_i1fof")
autowrap_mode = 1

[node name="RightText" type="Label" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = 53.0
offset_top = -449.0
offset_right = 345.0
offset_bottom = -96.0
grow_horizontal = 2
grow_vertical = 0
text = "po I oiqushbdqouisbdlqkjsdPOPOIUHQSDPOQIUHSDQSDLIUQSHDPMOKLNQPIOXCNPOI>WPMOUIDHQPOIHNKPQD
QMOSDIHNQSD
QMOLDSINQMSOIDQMSLDKNNQL/?KXNCMWOIHXPIOAMLKNNDQSMLKNDQMSOKDJPOQIFUJKLJNALKJN	ALIUBPSIQDOINCXW>MLKHPDOIAB SQLKJDHQ/SDQDML>WXCBLKUQYSDDPQOJSBDPuiohOQIUSDHQOPSHDQKLXWUICHPOW>XIHXBWOLIUSHPQIODHQNPSOICHW>XNLKJH>POISQHYDOPIUHPO"
label_settings = ExtResource("4_i1fof")
autowrap_mode = 1

[node name="MonsterPreview" type="Control" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -375.0
offset_top = -509.0
offset_right = -19.0
offset_bottom = -91.0
grow_horizontal = 2
grow_vertical = 0

[node name="Head" type="TextureRect" parent="MonsterPreview"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_pjofg")
expand_mode = 1
stretch_mode = 5

[node name="Arms" type="TextureRect" parent="MonsterPreview"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_uvudd")
expand_mode = 1
stretch_mode = 5

[node name="Torso" type="TextureRect" parent="MonsterPreview"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("4_dwl1m")
expand_mode = 1
stretch_mode = 5

[node name="Legs" type="TextureRect" parent="MonsterPreview"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("5_ce6kb")
expand_mode = 1
stretch_mode = 5
